--- a/styles.css
+++ b/styles.css
@@ -79,3 +79,80 @@ nav ul li a:hover{
     color: #b7b7b7;
     font-weight: 100;
 }
+
+.col-1 h4{
+    margin: 30px 0;
+    font-size: 20px;
+}
+
+button{
+    width: 140px;
+    border: 0;
+    padding: 12px 10px;
+    outline: none;
+    color: #fff;
+    background: linear-gradient(to right, #fb5283, #ff3527);
+    border-radius: 6px;
+    cursor: pointer;
+    transition: width 0.3s;
+}
+
+button img{
+    width: 30px;
+    display: none;     /*Only display it when hovered */
+}
+
+button:hover img{
+    display: block;
+}
+
+button:hover{
+    width: 160px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.col-1::after{
+    content:'';       /*syntax for displaying no text here */
+    width: 10px;
+    height: 57%;
+    background: linear-gradient(to right, #ff469f, #ff6062);     
+    position: absolute;             /*place it absolutely left and top and not any where else*/
+    left: -40px;              /*-40px far from left*/
+    top: 8px;               /*8px from top*/
+}
+
+.col-2{
+    position:relative;
+    flex-basis: 60%;
+    display: flex;
+    align-items: center;
+}
+
+.col-2 .controller{
+    width:90%;
+}
+
+.color-box{
+    position: absolute;
+    right: 0;
+    top: 0;
+    background: linear-gradient(#ff54a2, #ff575a);
+    border-radius: 20px 0 0 20px;
+    height: 100%;
+    width: 80%;
+    z-index: -1;
+    transform: translateX(150px);
+}
+
+.add-btn img{
+    width: 30px;
+    margin-bottom: 5px;
+}
+
+.add-btn{
+    text-align:center;
+    color: #fff;
+    cursor: pointer;
+}
