--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ button img{
     display: none;     /*Only display it when hovered */
 }
 
-button:hover img{
+button:hover img{     /*To display the arrow image */
     display: block;
 }
 
