--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@
 .menu-icon{
     width: 25px;
     cursor: pointer;
+    display: none;
 }
 
 nav{
@@ -155,4 +156,65 @@ button:hover{
     text-align:center;
     color: #fff;
     cursor: pointer;
+}
+
+.social-links img{
+    height: 13px;
+    margin: 20px;
+    cursor: pointer;
+}
+
+.social-links{
+    text-align: center;
+}
+
+
+
+
+@media only screen and (max-width: 700px) {
+    nav ul{
+        width: 100%;
+        background:linear-gradient(#ff54a2, #ff575a); 
+        position: absolute;
+        top: 75px;
+        right: 0;
+    }
+    nav ul li{
+        display: block;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    nav ul li a{
+        color: #fff;
+    }
+    .menu-icon{
+        display: block;
+    }
+    #menuList{
+        overflow: hidden;
+        transition: 0.5s;
+    }
+    .row{
+        flex-direction: column-reverse;  /*indicates that the main axis should be vertical, and the flex container's items should be laid out in a column. */
+        margin: 70px 0;
+    }
+    .col-2{
+        flex-basis:100%;
+        margin-bottom: 50px;
+    }
+    .col-2 .controller{
+        width: 77%;
+    }
+    .color-box{
+        transform: translateX(75px);
+    }
+    .col-1{
+        flex-basis: 100%;
+    }
+    .col-1 h2{
+        font-size: 35px;
+    }
+    .col-1 h3{
+        font-size: 15px;
+    }
 }
