--- a/styles.css
+++ b/styles.css
@@ -218,3 +218,14 @@ button:hover{
         font-size: 15px;
     }
 }
+
+
+
+.container2{
+    width: 100%;
+    min-height: 100vh;
+    padding-left: 8%;
+    padding-right: 8%;
+    box-sizing: border-box;   
+    overflow: hidden;      
+}
