--- a/styles.css
+++ b/styles.css
@@ -248,6 +248,6 @@ height: 10rem;
 }
 
 .services{
-    font: bold 25px arial;
+    font: bold 25px arial;        /*Services heading*/
     margin: 100px 0;
 }
